Use fixed docker image tag when action runs

--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ inputs:
     description: 'Images to consider as cache sources'
 runs:
   using: 'docker'
-  image: 'docker://jerray/publish-docker-action:latest'
+  image: 'docker://jerray/publish-docker-action:1.0.1'
 branding:
   icon: 'anchor'
   color: 'blue'
