--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Publish
-      uses: jerray/publish-docker-action@master
+      uses: jerray/publish-docker-action@v1.0.0
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
