--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+
+    - name: Download dependencies
+      run: go mod vendor
+
+    - name: Test
+      run: go test -v -cover -coverprofile=coverage.out .
+
+    - name: Report coverage
+      run: bash <(curl -s https://codecov.io/bash) -f coverage.out
+
     - name: Publish
       uses: jerray/publish-docker-action@v1.0.0
       with:
