--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: bash <(curl -s https://codecov.io/bash) -f coverage.out
 
     - name: Publish
-      uses: publish-docker-action@v0.0.1
+      uses: chainstep/publish-docker-action@v0.0.1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
